--- a/style.css
+++ b/style.css
@@ -1,9 +1,18 @@
+@font-face{
+	font-family: "Titillium Web";
+	src: url("css/fonts/OFL.txt");
+	src:
+	url("css/fonts/TitilliumWeb-ExtraLight.ttf");
+}
+
 body {
 	background-color: white;
 }
 
 h2 {
-
+	font-family: "Titillium Web";
+	font-weight: normal;
+	font-style: normal;
 }
 
 h3 {
@@ -23,17 +32,17 @@ h3 {
 
 .list li{
   display:inline;
+  border-top: solid 1px;
+  border-bottom: solid 1px;
 }
 
 #socialicons {
 	width: 50%;
-	border: solid;
 }
 
 #searchbar {
 	float: right;
 	width: 50%;
-	border: solid;
 	padding: 1px
 }
 
@@ -51,26 +60,34 @@ h3 {
 
 #header {
 	background-color: #f0f0f0;
-	background-image: url("./img/sample1_sized.jpg");
+	background-image: url("./img/sphere.jpg");
 	margin-bottom: 10px;
 	background-size: cover;
-	height: 400px;
+	height: 1000px;
 	color: white;
 }
 
+#headerlogo {
+	padding-top: 20px;
+}
+
 #headertext {
+	background-image: url("./img/headbox2.png");
+	color: black;
 	text-align: left;
-	border: solid;
-	width: 20em;
-	height: 10em;
-	margin-left: 3em;
-	background-color: #E5C416;
-	padding-left: 10px;
+	width: 550px;
+	height: 400px;
+	margin-left: 40px;
+	padding: 40px;
 }
 
 #menu {
-	text-align: center;}
+	text-align: center;
+}
 
+.top_row {
+	height: 250px;
+}
 
 .contact_short {
 	width: 45%;
