Footer work, cleaning up section wdiths and styles, clean up CSS.

--- a/style.css
+++ b/style.css
@@ -7,13 +7,12 @@
 
 }
 
+/* Global */
 body {
 	font-family: "Titillium Web";
 	background-color: white;
 	margin: 0;
 }
-
-
 
 h2 {
 	font-weight: bold;
@@ -40,6 +39,89 @@ h3 {
   display:inline;
 }
 
+.flexrow {
+	display: -webkit-flex; /* Safari */		
+	display: flex; /* Standard syntax */
+}
+/* END Global */
+
+/* Footer */
+
+#footer {
+	background-image: url("./img/footer.png");
+	text-align: right;	
+	height: 260px;
+	color: white;
+}
+
+.footer-left {
+	margin-top: 55px;
+	float: left;
+
+}
+
+.footer-right {
+	margin-top: 95px;
+	float: right;
+	width: 70%;
+	line-height: 200%
+}
+
+.footer-right p {
+	font-style: normal;
+	font-size: 18;
+}
+
+.footer_menu_list {
+  	display: inline-block; 	
+}
+
+.footer_menu_list li {
+	font-size: 18;
+	font-weight: normal;
+	padding-left: 20px;
+}
+/* END Footer */
+
+/* Header */
+#header {
+	background-color: #f0f0f0;
+	background-image: url("./img/sphere.jpg");
+	margin-bottom: 10px;
+	background-size: cover;
+	height: 1000px;
+	color: white;
+}
+
+#headerlogo {
+	
+}
+
+#headertext {
+	background-image: url("./img/headbox2.png");
+	color: black;
+	text-align: left;
+	width: 550px;
+	height: 400px;
+	padding: 40px;
+}
+
+.top_row {
+	height: 250px;
+	padding-top: 20px;
+}
+
+.top_left {
+	float: left;
+	width: 50%;
+}
+
+.top_right {
+	float: right;
+	width: 50%;
+	padding: 1px
+}
+
 .menu_list {
   	border-bottom: 1px solid #ffffff;
   	border-top: 1px solid #ffffff;
@@ -59,12 +141,6 @@ h3 {
   	margin-top: -1px;
   	margin-bottom: -1px;
 }
-
-.socialicons {
-	border: solid 1px green;
-	padding-bottom: 20px;
-}
-
 .searchbar {
 	width: 100%;
 	border: solid 1px green;
@@ -107,62 +183,39 @@ h3 {
     color: black;
 }
 
-
-
-
-
-.top_left {
-	float: left;
-	width: 50%;
+.socialicons {
+	border: solid 1px green;
+	padding-bottom: 20px;
 }
+/* END Header */
 
-.top_right {
-	float: right;
-	width: 50%;
-	padding: 1px
-}
-
-.flexrow {
-	display: -webkit-flex; /* Safari */		
-	display: flex; /* Standard syntax */
-}
-
-#footer {
-	text-align: center;	
-	border: solid;
-	margin-top: 2em;
-	margin-bottom: 2em;
-}
-
-#header {
-	background-color: #f0f0f0;
-	background-image: url("./img/sphere.jpg");
-	margin-bottom: 10px;
-	background-size: cover;
-	height: 1000px;
-	color: white;
-}
-
-#headerlogo {
-	
-}
-
-#headertext {
-	background-image: url("./img/headbox2.png");
+/* Section classes */
+/* about */
+.about {
+	background-color: white;
 	color: black;
-	text-align: left;
-	width: 550px;
-	height: 400px;
-	padding: 40px;
+	padding-top: 4em;
+	padding-bottom: 4em;
 }
 
-.top_row {
-	height: 250px;
-	padding-top: 20px;
+/* contact */
+.contact {
+	background-color: #585f66;
+	color: white;
+	padding-top: 4em;
+	padding-bottom: 4em;	
 }
 
 .contact_short {
 	width: 45%;
+}
+
+/* blogs */
+.blogs {
+	background-color: white;
+	color: black;
+	padding-top: 4em;
+	padding-bottom: 4em;	
 }
 
 .blog_card {
@@ -170,6 +223,7 @@ h3 {
 	width: 282px;
 }
 
+/* highlights */
 .highlights {
 	background-color: #010029;
 	color: white;
@@ -177,7 +231,20 @@ h3 {
 	padding-bottom: 4em;
 }
 
+/* testimonials */
+.testimonials {
+	background-color: #1a1a1a;
+	color: white;
+	padding-top: 4em;
+	padding-bottom: 4em;
+
+}
+
+/* gallery */
 .gallery {
+	background-color: #e1d6a1;
+	color: black;
 	padding-top: 4em;
 	padding-bottom: 4em;	
 }
+/* END Section Classes */
