Start adding social icons. Updated icons for highlights section.

--- a/style.css
+++ b/style.css
@@ -185,7 +185,11 @@ h3 {
 
 .socialicons {
 	border: solid 1px green;
-	padding-bottom: 20px;
+	padding-bottom: 8px;
+}
+
+.socialicons li {
+	padding-right: 5px;
 }
 /* END Header */
 
