--- a/style.css
+++ b/style.css
@@ -43,6 +43,30 @@ h3 {
 	display: -webkit-flex; /* Safari */		
 	display: flex; /* Standard syntax */
 }
+
+.toptransition {
+	margin-top: 250px;
+	background-image: url("./img/toptransition.png");
+	height: 102px;
+}
+
+.bottomtransition {
+	margin-top: 40px;
+	background-image: url("./img/bottomtransition.png");
+	height: 102px;
+}
+
+.orange-cta {
+  border-radius: 5px;
+  background: #f6af27;
+  padding: 13px 20px 0px 20px; 
+  color: white;
+  font-weight: bold;
+  width: 150px;
+  height: 50px; 
+  text-align: center; 
+  font-size: large;
+}
 /* END Global */
 
 /* Footer */
@@ -119,13 +143,13 @@ h3 {
 .top_right {
 	float: right;
 	width: 50%;
-	padding: 1px
 }
 
 .menu_list {
-  	border-bottom: 1px solid #ffffff;
+	border-bottom: 1px solid #ffffff;
   	border-top: 1px solid #ffffff;
-  	display: inline-block; 	
+  	display: inline-block;
+  	padding-top: 10px;
 }
 
 .menu_list li {
@@ -135,15 +159,13 @@ h3 {
 }
 
 .menu_list li:hover {
-  	border-bottom: 1px solid #ffffff;
   	border-top: 1px solid #b08d2e;
+  	padding-top: 10px;
+  	margin-top: -11px;
   	display: inline-block;
-  	margin-top: -1px;
-  	margin-bottom: -1px;
 }
 .searchbar {
 	width: 100%;
-	border: solid 1px green;
 	float: right;
 }
 
@@ -184,7 +206,6 @@ h3 {
 }
 
 .socialicons {
-	border: solid 1px green;
 	padding-bottom: 8px;
 }
 
@@ -198,7 +219,6 @@ h3 {
 .about {
 	background-color: white;
 	color: black;
-	padding-top: 4em;
 	padding-bottom: 4em;
 }
 
