--- a/style.css
+++ b/style.css
@@ -67,6 +67,19 @@ h3 {
   text-align: center; 
   font-size: large;
 }
+
+.blue-cta {
+  border-radius: 5px;
+  background: #181717;
+  padding: 13px 20px 0px 20px; 
+  color: white;
+  font-weight: bold;
+  width: 150px;
+  height: 50px; 
+  text-align: center; 
+  font-size: large;
+}
+
 /* END Global */
 
 /* Footer */
@@ -241,7 +254,17 @@ h3 {
 .about {
 	background-color: white;
 	color: black;
-	padding-bottom: 4em;
+}
+
+.about-text {
+	margin-top: 30px;
+	padding-left: 50px;
+	border-left: 1px solid #e9e9e9;
+}
+
+.about-image {
+	text-align: right;
+	padding-right: 10%
 }
 
 /* contact */
