--- a/style.css
+++ b/style.css
@@ -67,8 +67,24 @@ h3 {
 	height: 102px;
 }
 
+.toptransition-gallery {
+	margin-top: 20px;
+	background-image: url("./img/toptransition.png");
+	height: 102px;
+}
+.toptransition-grey {
+
+	background-image: url("./img/toptransition-grey.png");
+	height: 102px;
+}
 .bottomtransition {
 	margin-top: 40px;
+	background-image: url("./img/bottomtransition.png");
+	height: 100px;
+}
+
+.bottomtransition-gallery {
+	margin-top: -60px;
 	background-image: url("./img/bottomtransition.png");
 	height: 100px;
 }
@@ -207,7 +223,7 @@ h3 {
 }
 
 .menu_list li:hover {
-  	border-top: 1px solid #b08d2e;
+  	border-top: 1px solid #f6af27;
   	padding-top: 10px;
   	margin-top: -11px;
   	display: inline-block;
@@ -298,6 +314,10 @@ h3 {
 	border-left: 1px solid #e9e9e9;
 }
 
+.about-text p {
+	padding-bottom: 12px;
+}
+
 .about-image {
 	text-align: right;
 	padding-right: 10%
@@ -340,9 +360,7 @@ h3 {
 .blogs {
 	background-color: white;
 	background-image: url("./img/blogs.png");
-	color: black;
-	padding-top: 4em;
-	padding-bottom: 4em;	
+	color: black;	
 }
 
 .blog_card {
@@ -356,7 +374,7 @@ h3 {
 	background-image: url("./img/highlights.png");
 	background-position: center;
 	color: white;
-	height: 550px;
+	height: 608px;
 }
 .blue-col {
 	margin-bottom: 10px;
@@ -377,9 +395,19 @@ h3 {
 
 /* gallery */
 .gallery {
-	background-color: #e1d6a1;
+	background-color: #white;
 	color: black;
 	padding-top: 4em;
 	padding-bottom: 4em;	
+}
+
+.gimage {
+	margin-top: 20px;
+	border: solid 5px #e6c000;
+}
+
+.gimage-alt {
+
+	border: solid 5px #e6c000;
 }
 /* END Section Classes */
