--- a/style.css
+++ b/style.css
@@ -25,6 +25,11 @@ h3 {
 	color: #E5C416;
 }
 
+hr.yellow {
+	border-top: 2px solid #E5C416;
+	width: 60%;
+}
+
 .border1 {
 	border: solid 1px white;
 }
@@ -73,7 +78,7 @@ h3 {
 	height: 102px;
 }
 .toptransition-grey {
-
+	margin-top: 70px;
 	background-image: url("./img/toptransition-grey.png");
 	height: 102px;
 }
@@ -121,6 +126,15 @@ h3 {
 }
 
 .blue-cta {
+  border-radius: 5px;
+  background: #181717;
+  padding: 8px 23px 8px 23px; 
+  color: white;
+  font-weight: bold;
+  font-size: large;
+}
+
+.blue-cta2 {
   border-radius: 5px;
   background: #181717;
   padding: 8px 23px 8px 23px; 
@@ -362,11 +376,27 @@ h3 {
 	background-color: white;
 	background-image: url("./img/blogs.png");
 	color: black;	
+	height: 850px;
+}
+
+.blogs h3 {
+	text-transform: uppercase;
 }
 
 .blog_card {
-	border: solid;
-	width: 282px;
+	border: solid 2px #e2e2e2;
+	background-color: white;
+	height: 500px;
+}
+
+.blog_card p {
+	padding-right: 20px;
+	padding-left: 20px;
+}
+
+.blog_card h3 {
+	color: #181717;
+	font-weight: bold;
 }
 
 /* highlights */
