--- a/style.css
+++ b/style.css
@@ -1,3 +1,26 @@
+@charset "UTF-8";
+/*
+Theme Name: JZ 2020
+Theme URI: https://wordpress.org/themes/jz2020
+Author: JZ
+Author URI: https://johnzeren.com
+Description: First homemade WP theme
+Requires at least: 4.9.6
+Requires PHP: 5.2.4
+Version: 1.7
+License: GNU General Public License v2 or later
+License URI: http://www.gnu.org/licenses/gpl-2.0.html
+Text Domain: johnzeren
+Tags: one-column, flexible-header, accessibility-ready, custom-colors, custom-menu, custom-logo, editor-style, featured-images, footer-widgets, rtl-language-support, sticky-post, threaded-comments, translation-ready
+
+@font-face{
+	font-family: "Titillium Web";
+	src: url("css/fonts/OFL.txt");
+	src:
+	url("css/fonts/TitilliumWeb-Regular.ttf");
+
+
+}
 @font-face{
 	font-family: "Titillium Web";
 	src: url("css/fonts/OFL.txt");
@@ -77,7 +100,7 @@ body {
 h2 {
 	font-weight: bold;
 	font-style: normal;
-	font-size: 44;
+	font-size: 44px;
 }
 
 h3 {
@@ -299,7 +322,7 @@ img {
 }
 
 .footer_menu_list li {
-	font-size: 18;
+	font-size: 18px;
 	font-weight: normal;
 	padding-left: 20px;
 }
@@ -365,7 +388,7 @@ img {
 }
 
 .menu_list li {
-	font-size: 20;
+	font-size: 20px;
 	font-weight: bold;
 	padding-right: 20px;
 }
