--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -100,7 +100,7 @@ body {
 h2 {
 	font-weight: bold;
 	font-style: normal;
-	font-size: 44;
+	font-size: 44px;
 }
 
 h3 {
@@ -322,7 +322,7 @@ img {
 }
 
 .footer_menu_list li {
-	font-size: 18;
+	font-size: 18px;
 	font-weight: normal;
 	padding-left: 20px;
 }
@@ -388,7 +388,7 @@ img {
 }
 
 .menu_list li {
-	font-size: 20;
+	font-size: 20px;
 	font-weight: bold;
 	padding-right: 20px;
 }
