--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -336,6 +336,11 @@ img {
 	font-weight: normal;
 	padding-left: 20px;
 }
+
+.footer_menu_list a {
+	color: white;
+}
+
 /* END Footer */
 
 /* Header */
@@ -402,6 +407,13 @@ img {
 	font-size: 20px;
 	font-weight: bold;
 	padding-right: 20px;
+}
+
+.menu_list a {
+	color: white;
+}
+.menu_list a:hover {
+	text-decoration: none;
 }
 
 .menu_list li:hover {
