--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -202,7 +202,7 @@ img {
 }
 
 .container-fluid {
-	margin: 0px 100px 0px 100px;
+	width: 1200px;
 	overflow: hidden;
 }
 
@@ -569,7 +569,7 @@ img {
 .blog_card {
 	border: solid 2px #e2e2e2;
 	background-color: white;
-	height: 500px;
+	height: 565px;
 	margin: 4%;
 	text-align: center;
 }
@@ -595,12 +595,25 @@ img {
 	margin-bottom: 10px;
 }
 
-.cropped {
+.card-img {
+	min-height: 120px;
+}
+
+.crop {
+	object-fit: cover;
 	width: 100%;
-    height: 200px; /* height of container */
+    height: auto; /* height of container */
+    max-height: 238px;	
     overflow: hidden;
 }
 
+.blog-featured {
+	object-fit: cover;
+	width: 100%;
+	height: auto;
+	max-height: 500px;
+	overflow: hidden;
+}
 
 /* testimonials */
 .testimonials {
