--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -109,10 +109,16 @@ body {
 	margin: 0;
 }
 
-h2 {
+h1 {
 	font-weight: bold;
 	font-style: normal;
 	font-size: 44px;
+}
+
+h2 {
+	font-weight: bold;
+	font-style: normal;
+	font-size: 38px;
 }
 
 h3 {
@@ -728,4 +734,8 @@ form textarea {
 span.author.vcard, span.posted-on, span.comment-count, span.edit-link {
 	padding: 0px 10px 0px 5px;
 }
-
+/*social sharing */
+.sd-social-icon {
+	background-color: blue;
+	color: white;
+}
