--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -208,7 +208,7 @@ img {
 }
 
 .container-fluid {
-	max-width: 1200px;
+	max-width: 1140px;
 	overflow: hidden;
 }
 
@@ -598,7 +598,10 @@ img {
 	color: white;
 }
 .blue-col {
-	margin-bottom: 10px;
+	margin-top: 20px;
+	margin-bottom: 20px;
+	padding-left: 20px;
+	padding-right: 20px;
 }
 
 .card-img {
