Fix background image for blog section on home page.

--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -249,7 +249,7 @@ img {
 	height: 102px;
 }
 .toptransition-grey {
-	background-image: url("./img/toptransition-grey.png");
+	background-image: url("./img/toptransition-grey.png,"), url("/jz/wp-content/themes/jz2020/img/blogs.png");
 	height: 102px;
 }
 
