Just kidding, now really fixed the background image for blog section on home page and inner pages.

--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -248,8 +248,14 @@ img {
 	background-image: url("./img/toptransition.png");
 	height: 102px;
 }
+
 .toptransition-grey {
-	background-image: url("./img/toptransition-grey.png,"), url("/jz/wp-content/themes/jz2020/img/blogs.png");
+	background-image: url("./img/toptransition-grey.png");
+	height: 102px;
+}
+
+.toptransition-grey-home {
+	background-image: url("./img/toptransition-grey.png"), url("/jz/wp-content/themes/jz2020/img/blogs.png");
 	height: 102px;
 }
 
