Comment form cleanup.

--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -795,3 +795,15 @@ a.next.page-numbers {
 .nav-links {
 	margin-left: 15px;
 }
+
+.form-submit {
+	clear: both;
+}
+
+#subscribe-label {
+	display: none;
+}
+
+#subscribe-blog-label {
+	display: none;
+}
