--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -669,8 +669,7 @@ img {
 .gallery {
 	background-color: #white;
 	color: black;
-	padding-top: 4em;
-	padding-bottom: 4em;	
+	padding-bottom: 80px;	
 }
 
 .gimage {
