Finally fixing the me image on the home page being way to large. Just removing it for mobile devices.

--- a/wptheme/jz2020/style.css
+++ b/wptheme/jz2020/style.css
@@ -105,6 +105,10 @@ Tags: one-column, flexible-header, accessibility-ready, custom-colors, custom-me
 		display: block !important;
 		margin-bottom: 20px !important;
 	}
+
+	.about-image {
+		display: none;
+	}
 }
 
 /* Global */
